# local_newsifier

./: .editorconfig  .env.cursor  .env.example  .env.test  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile.dev  FIX-APIFY-WEBHOOK-GAMEPLAN.md  FastAPI-Injectable-Migration-Plan.md  GAMEPLAN-V2.md  GAMEPLAN.md  IMPLEMENT_REFACTORED_ARCHITECTURE.md  LICENSE  MAKEFILE_ISSUES.md  Makefile  OUT_OF_DATE_CLAUDE.md  PLAN_A.md  PLAN_B.md  PR_README.md  PR_description.md  Procfile  README.md  README_CLI.md  README_FASTAPI_INJECTABLE.md  REFACTOR.md  REFACTORED_ARCHITECTURE_GUIDE.md  UPDATE_DOCS.md  WEBHOOK_SIMPLIFICATION_PLAN.md  _config.yml  add_apify_issues.sh  add_issues_to_cli.sh  add_issues_to_di.sh  add_issues_to_error_handling.sh  add_issues_to_infrastructure.sh  add_issues_to_projects.sh  alembic-deployment-analysis.md  (+70 more)
.claude/commands/: analyze_closed_prs.md  analyze_labels.md  analyze_test_failures.md  branch_cleanup.md  coverage_report.md  find_unused_code.md  fix_tests_in_github.md  implement.md  prioritize_issues_in_github.md  review_dependencies.md  review_queue.md  start_new_issue.md  troubleshoot.md
.github/: description.md  pr_description.md  pr_description_add_alembic.md  pr_description_celery_integration.md  pr_description_consolidate_analysis_tools.md  pr_description_consolidate_entity_tracking.md  pr_description_fix_api_tests.md  pr_description_fix_module_install.md  pr_description_fix_railway_deployment.md  pr_description_fix_railway_json.md  pr_description_fix_tests.md  pr_description_improve_api_tests.md  pr_description_improve_flow_tests.md  pr_description_remove_duplicated_tools.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: test-coverage.md
.github/workflows/: ci.yml  test-coverage.yml  test.yml
alembic/: README.md  env.py
cache/: rss_cache.json  rss_urls.json
docs/: README.md  apify_architecture.md  apify_error_handling.md  apify_error_handling_example.md  apify_integration.md  apify_webhook_testing.md  architecture-clarification.md  architecture_diagram.md  article_preprocessing.md  celery_integration.md  ci_pr_chains.md  database_error_handling.md  database_session_management.md  db_diagnostics.md  db_error_handling_standard.md  db_initialization.md  dependency_injection.md  dependency_injection_antipatterns.md  dependency_injection_tools.md  di_architecture.md  di_conversion_plan.md  di_external_api_integration.md  documentation-updates-summary.md  dto_patterns_guide.md  error_handling.md  error_handling_standards.md  external_api_integration.md  fastapi_injectable.md  fastapi_injectable_adapter.md  fastapi_injectable_external_apis.md  fastapi_injectable_instance_reuse.md  fastapi_injectable_migration.md  flow_di_pattern_review.md  gameplan.md  index.md  injectable_examples.md  injectable_patterns.md  local_system_setup.md  offline_installation_current_state.md  offline_installation_fix.md  (+21 more)
env312/: pyvenv.cfg
events/: event.json
examples/: crud_with_error_handling.py
fastapi_injectable/: __init__.py
logs/: README.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
prof/: README.md
reports/: investigation_local_business_development.html
scripts/: Dockerfile  add_test_headlines.py  apply_event_loop_fixes.py  build_dev_wheels.sh  build_linux_wheels.sh  build_linux_x86_64_wheels.sh  build_linux_x86_64_wheels_complete.sh  build_linux_x86_64_wheels_docker.sh  build_missing_coverage_wheel.sh  build_wheels.sh  check_pr_description.py  cleanup_mock_container.sh  clear_articles.py  create_pr.py  create_pr_description.py  db_migration.py  debug_rss_parser.py  demo_celery_tasks.py  demo_database.py  demo_entity_service.py  demo_entity_tracking.py  demo_headline_trends.py  demo_investigation.py  demo_investigation_crew.py  demo_process.py  demo_refactored_architecture.py  demo_sentiment_analysis.py  demo_sentiment_analysis_v2.py  demo_setup.py  demo_trend_analysis.py  diagnose_alembic.sh  event_loop_diagnostics.py  fix_unused_imports.py  generate_offline_requirements.py  hello_world_v8.py  identify_slow_tests.py  init_alembic.sh  init_celery_beat.sh  init_celery_worker.sh  init_cursor_db.py  (+27 more)
src/: __init__.py
tasks/: migrate_remaining_models.md
tests/: CLAUDE.md  README.md  __init__.py  ci_skip_config.py  conftest.py  conftest_ci.py  conftest_injectable.py  database_test.py  di_patches.py  integration_test.py  mocks.py  patches.py  performance_test.py  test_celery_app.py  test_database.py  test_database_storage.py  test_di_container.py  test_exceptions.py  test_fastapi_injectable_adapter.py  test_fastapi_injectable_core.py  test_no_leaks.py  test_pipeline.py  test_refactored_architecture.py  test_tasks_sync.py
wheels/: .gitignore  README.md  blis-1.3.0-cp311-cp311-macosx_11_0_arm64.whl  chroma_hnswlib-0.7.6-cp311-cp311-macosx_11_0_arm64.whl  cymem-2.0.11-cp311-cp311-macosx_11_0_arm64.whl  instructor-1.8.2-py3-none-any.whl  jiter-0.8.2-cp311-cp311-macosx_11_0_arm64.whl  marisa_trie-1.2.1-cp311-cp311-macosx_11_0_arm64.whl  mmh3-5.1.0-cp311-cp311-macosx_11_0_arm64.whl  murmurhash-1.0.12-cp311-cp311-macosx_11_0_arm64.whl  orjson-3.10.18-cp311-cp311-macosx_15_0_arm64.whl  pypdfium2-4.30.1-py3-none-macosx_11_0_arm64.whl  srsly-2.5.1-cp311-cp311-macosx_11_0_arm64.whl  thinc-8.3.6-cp311-cp311-macosx_11_0_arm64.whl  tiktoken-0.9.0-cp311-cp311-macosx_11_0_arm64.whl  watchfiles-1.0.5-cp311-cp311-macosx_11_0_arm64.whl
(+923 files in other folders)
