[tool.poetry]
name = "local-newsifier"
version = "0.1.0"
description = "A robust system for fetching, analyzing, and storing local news articles from Gainesville, FL"
authors = ["Alex Rockwell"]
readme = "README.md"
packages = [{include = "local_newsifier", from = "src"}]

[tool.poetry.dependencies]
python = "~3.12"
crewai = "^0.114.0"
chromadb = "1.0.9"
pydantic = "^2.11.3"
pydantic-settings = "^2.2.1"
sqlalchemy = "~2.0.40"
spacy = "~3.8.4"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
tenacity = "^9.1.2"
selenium = "^4.31.0"
webdriver-manager = "^4.0.2"
python-dateutil = "^2.9.0"
psycopg2-binary = "~2.9.10"
textblob = "^0.18.0"
sqlmodel = "0.0.24"
fastapi = "0.115.9"
uvicorn = "^0.27.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
alembic = "^1.13.1"
itsdangerous = ">=2.1.2"
celery = "~5.5.1"
redis = "^5.2.1"
click = "^8.1.7"
psutil = "^7.0.0"
tabulate = "^0.9.0"
apify-client = "1.10.0"
fastapi-injectable = "0.7.0"
greenlet = "^3.2.2"

[tool.poetry.scripts]
nf = "local_newsifier.cli.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"

# Add pytest warning filters and configuration
pytest-profiling = "^1.8.1"
pytest-xdist = "3.6.1"
[tool.pytest.ini_options]
# Don't collect scripts directory or loose test files at project root
testpaths = ["tests"]
norecursedirs = ["scripts"]
python_files = ["test_*.py", "*_test.py"]

# Configure test options
# Note: -n auto was removed to allow running individual tests more easily
addopts = "-vs"

# Define custom markers for test categorization
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "db: marks tests that require database connection",
    "fast: marks tests that should run quickly"
]


filterwarnings = [
    # Pydantic V2 deprecation warning about class-based config
    "ignore::pydantic.warnings.PydanticDeprecatedSince20:",
    # litellm deprecation warning about open_text
    "ignore::DeprecationWarning:litellm.utils:",
]

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
known_first_party = ["local_newsifier"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
